# Credit-Agent

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
agent/: config.py  graph.py  tools.py
agent-test/neoNavy/: pyproject.toml
agent-test/neoNavy/src/: main.py
agent-test/neoNavy/src/model/: load.py  tools.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AdminPanel.tsx  ChatHistoryToggle.tsx  ChatPanel.tsx  CollapsibleSimulator.tsx  CreditProgressBar.tsx  DocumentationUploader.tsx  Header.tsx  Login.tsx  MortgageSimulator.css  MortgageSimulator.tsx  ProfileMenu.tsx  PropertyDocumentsUploader.tsx  PropertySearchForm.tsx  SettingsPanel.tsx  Toast.tsx
frontend/src/components/ui/: alert.tsx  button.tsx  card.tsx  input.tsx  select.tsx
frontend/src/contexts/: AuthContext.tsx  CreditStatusContext.tsx  RequestContext.tsx
frontend/src/hooks/: useChatAgent.ts  useChatHistory.ts
src/: .gitignore  app.py  config.py  graph.py  pyproject.toml  script.py  test_image_tool.py  test_payload.json  tools.py
