[project]
name = "neoNavy"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    "aws-opentelemetry-distro >= 0.10.0",
    "bedrock-agentcore >= 1.0.3",
    "langchain >= 1.0.3",
    "langchain-mcp-adapters >= 0.1.11",
    "langchain_aws >= 1.0.0",
    "langgraph >= 1.0.2",
    "mcp >= 1.19.0",
    "numpy < 2.0.0",
    "pytest >= 7.0.0",
    "pytest-asyncio >= 0.21.0",
    "python-dotenv >= 1.2.1",
    "tiktoken >= 0.7.0",
]